[package]
name = "bevy-sph"
version = "0.1.0"
edition = "2021"
description = "A Smoothed Particle Hydrodynamics (SPH) simulation using Bevy"
authors = ["Alexander Quessy alexander@quessy.io"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.15"
rand = "0.8"

[lib]
path = "src/lib.rs"
name = "sph_plugin"
